Closed Bug 775431 Opened 12 years ago Closed 12 years ago

MOZ_DUMP_PAINT_LIST debugging output isn't terminal-friendly

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla17

People

(Reporter: cwiiis, Assigned: cwiiis)

Details

Attachments

(1 file)

When exporting MOZ_DUMP_PAINT_LIST, the output is html - this is great when dumping to a file, but not so useful if you're trying to read the output on a terminal.

The attached patch only outputs in html format when outputting to a file.
Comment on attachment 643760 [details] [diff] [review]
Only output HTML for MOZ_DUMP_PAINT_LIST when outputting to a file

Not pretty, but does the job.
Attachment #643760 - Attachment is patch: true
Attachment #643760 - Flags: review?(matt.woodrow)
Assignee: nobody → chrislord.net
Status: NEW → ASSIGNED
Attachment #643760 - Flags: review?(matt.woodrow) → review+
And a part that got lost in rebasing pushed: https://hg.mozilla.org/integration/mozilla-inbound/rev/4823b8b02b27
https://hg.mozilla.org/mozilla-central/rev/e539f011a452
https://hg.mozilla.org/mozilla-central/rev/4823b8b02b27
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla17
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: