Bug 775431 - Make MOZ_DUMP_PAINT_LIST output terminal-friendly. r=mattwoodrow

Only output in HTML if we're dumping to a file, otherwise output as it did
before the HTML output change was made.